--- a/css/modahair.webflow.css
+++ b/css/modahair.webflow.css
@@ -83,12 +83,26 @@ a {
 
 .navbutton.contact {
   position: relative;
-  bottom: -12px;
-  margin-top: 0px;
-  padding: 10px 15px;
+  bottom: auto;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  max-height: 50px;
+  margin-top: 8px;
+  padding: 0px 15px;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   border-radius: 13px;
   background-color: #e22b71;
   color: #fff;
+  line-height: 20px;
 }
 
 .hero {
@@ -337,10 +351,10 @@ a {
   -webkit-justify-content: space-around;
   -ms-flex-pack: distribute;
   justify-content: space-around;
-  -webkit-box-align: start;
-  -webkit-align-items: flex-start;
-  -ms-flex-align: start;
-  align-items: flex-start;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   grid-column-gap: 100px;
   background-color: #d8d8d8;
 }
@@ -486,6 +500,17 @@ a {
   -ms-grid-columns: 1.5fr 1fr;
   grid-template-columns: 1.5fr 1fr;
   font-family: Castelar, sans-serif;
+}
+
+.content_grid.beauty-content {
+  -webkit-box-pack: start;
+  -webkit-justify-content: start;
+  -ms-flex-pack: start;
+  justify-content: start;
+  -ms-grid-columns: minmax(200px, 66%);
+  grid-template-columns: minmax(200px, 66%);
+  -ms-grid-rows: auto 1fr;
+  grid-template-rows: auto 1fr;
 }
 
 .image-2 {
@@ -2496,15 +2521,16 @@ a {
   display: -ms-flexbox;
   display: flex;
   width: 100%;
+  max-width: 100%;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
   -webkit-flex-direction: row;
   -ms-flex-direction: row;
   flex-direction: row;
-  -webkit-box-pack: justify;
-  -webkit-justify-content: space-between;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   -webkit-box-align: center;
   -webkit-align-items: center;
   -ms-flex-align: center;
@@ -2717,6 +2743,7 @@ a {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
+  width: 500px;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
   -webkit-flex-direction: column;
@@ -2733,22 +2760,29 @@ a {
   grid-row-gap: 20px;
 }
 
-.div-block-7 {
+.hair-service-container {
   position: relative;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
+  width: auto;
+  height: auto;
   max-height: 100vh;
-  -webkit-box-orient: vertical;
+  -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
-  -webkit-flex-direction: column;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  -webkit-box-pack: center;
-  -webkit-justify-content: center;
-  -ms-flex-pack: center;
-  justify-content: center;
+  -webkit-flex-direction: row;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  grid-column-gap: 0px;
 }
 
 .collection-list-wrapper-5 {
@@ -2791,9 +2825,18 @@ a {
 }
 
 .beauty-page-container.beauty-list {
-  width: 700px;
-  height: 400px;
-  grid-row-gap: 20px;
+  width: 400px;
+  height: 500px;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  grid-column-gap: 30px;
+  grid-row-gap: 30px;
   font-size: 30px;
 }
 
@@ -3037,6 +3080,93 @@ a {
   font-size: 14px;
 }
 
+.nav-menu {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+}
+
+.beauty-element {
+  font-family: Castelar, sans-serif;
+  font-size: 24px;
+}
+
+.hair-service-list {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  width: 400px;
+  height: 550px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-justify-content: space-around;
+  -ms-flex-pack: distribute;
+  justify-content: space-around;
+  -webkit-box-align: stretch;
+  -webkit-align-items: stretch;
+  -ms-flex-align: stretch;
+  align-items: stretch;
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
+}
+
+.hair-service-price {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  width: auto;
+  height: auto;
+  font-family: Castelar, sans-serif;
+}
+
+.hair-service-name {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
+.hair-service-text {
+  font-family: Castelar, sans-serif;
+}
+
+.div-block-12 {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+  -webkit-justify-content: flex-end;
+  -ms-flex-pack: end;
+  justify-content: flex-end;
+}
+
+.beauty-button {
+  max-width: 200px;
+  margin-left: 100px;
+  border-radius: 13px;
+  background-color: #e22b71;
+  font-family: Castelar, sans-serif;
+  color: #d8d8d8;
+  font-size: 20px;
+  text-align: center;
+}
+
 @media screen and (min-width: 1280px) {
   .section_content {
     display: -webkit-box;
@@ -3223,6 +3353,10 @@ a {
   .hair-feature {
     grid-row-gap: 50px;
   }
+
+  .hair-service-list {
+    width: 440px;
+  }
 }
 
 @media screen and (min-width: 1920px) {
@@ -3233,9 +3367,64 @@ a {
     align-items: center;
   }
 
+  .heading {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    margin-bottom: 24px;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    font-size: 40px;
+  }
+
+  .text-span {
+    padding-top: 20px;
+    font-size: 14px;
+  }
+
+  .logo-mobile {
+    padding-top: 5px;
+    font-size: 18px;
+  }
+
+  .navbar-2 {
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    grid-column-gap: 300px;
+    grid-row-gap: 300px;
+  }
+
+  .nav-link-3.work-from {
+    width: 200px;
+    padding-top: 19px;
+    padding-right: 10px;
+    padding-left: 10px;
+  }
+
   .paragraph-5 {
     -webkit-column-count: auto;
     column-count: auto;
+  }
+
+  .beauty-page-container.beauty-list {
+    margin-right: 70px;
+    padding-bottom: 9px;
+  }
+
+  .hair-service-list {
+    width: 550px;
+    grid-row-gap: 10px;
+    font-size: 20px;
+  }
+
+  .hair-service-price {
+    grid-column-gap: 0px;
   }
 }
 
@@ -3339,7 +3528,7 @@ a {
   .h2 {
     margin-right: 40px;
     font-size: 42px;
-    text-align: left;
+    text-align: center;
   }
 
   .content_grid {
@@ -3349,18 +3538,59 @@ a {
   }
 
   .content_grid.whyus {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
     -ms-grid-columns: 2fr 1fr;
     grid-template-columns: 2fr 1fr;
   }
 
+  .content_grid.beauty-content {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-justify-content: space-around;
+    -ms-flex-pack: distribute;
+    justify-content: space-around;
+    text-align: left;
+  }
+
+  .feature_container {
+    position: relative;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+  }
+
   .paragraph {
     font-size: 16px;
-    text-align: left;
+    text-align: center;
   }
 
   .h2_divider {
     position: relative;
-    left: -303px;
+    left: auto;
     text-align: center;
   }
 
@@ -3684,7 +3914,7 @@ a {
     grid-row-gap: 0px;
   }
 
-  .div-block-7 {
+  .hair-service-container {
     max-height: none;
     -webkit-box-pack: center;
     -webkit-justify-content: center;
@@ -3733,6 +3963,17 @@ a {
 
   .image-75 {
     margin-top: 10px;
+  }
+
+  .hair-service-list {
+    width: 500px;
+    height: 600px;
+    font-size: 16px;
+  }
+
+  .beauty-button {
+    position: relative;
+    margin-left: 0px;
   }
 }
 
@@ -3827,6 +4068,10 @@ a {
     max-width: 100vw;
   }
 
+  .h2 {
+    text-align: center;
+  }
+
   .content_grid {
     width: 99.9999593080606%;
     max-width: 99.9981824767588%;
@@ -3846,8 +4091,28 @@ a {
     grid-template-columns: 2fr;
   }
 
+  .content_grid.beauty-content {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+  }
+
   .feature_container {
     width: 100%;
+  }
+
+  .paragraph {
+    text-align: center;
   }
 
   .h2_divider {
@@ -4223,6 +4488,14 @@ a {
     width: 150px;
     height: auto;
   }
+
+  .beauty-button {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    margin-left: 0px;
+  }
 }
 
 @media screen and (max-width: 479px) {
@@ -4379,6 +4652,17 @@ a {
     grid-template-columns: 1fr 1fr;
   }
 
+  .content_grid.beauty-content {
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+  }
+
   .feature_container {
     max-width: 100%;
   }
@@ -4404,7 +4688,7 @@ a {
   }
 
   .h2_divider {
-    left: -100px;
+    left: auto;
   }
 
   .collection-item {
@@ -5000,6 +5284,10 @@ a {
     min-width: auto;
   }
 
+  .hair-feature {
+    width: auto;
+  }
+
   .text-block-14 {
     font-size: 12px;
   }
@@ -5026,6 +5314,39 @@ a {
 
   .collection-list-4 {
     width: auto;
+  }
+
+  .beauty-element {
+    text-align: center;
+  }
+
+  .hair-service-list {
+    width: 300px;
+  }
+
+  .hair-service-text {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    margin-right: 10px;
+    white-space: normal;
+  }
+
+  .beauty-button {
+    position: relative;
+    right: auto;
+    width: 220px;
+    max-width: none;
+    margin-right: 0px;
+    margin-left: 0px;
+    font-size: 14px;
+  }
+
+  .div-block-13 {
+    margin-right: 0px;
+    padding-right: 5px;
+    padding-left: 5px;
   }
 }
 
@@ -5064,18 +5385,18 @@ a {
   align-self: center;
 }
 
-#w-node-_72681a1c-b88b-0f68-b4ae-5638e506c98f-76393764 {
+#w-node-_05c5ec03-d637-a420-f7fc-8ff9c8522ee0-76393764 {
+  -ms-grid-column: span 1;
+  grid-column-start: span 1;
   -ms-grid-column-span: 1;
-  grid-column-end: 3;
-  -ms-grid-column: 2;
-  grid-column-start: 2;
+  grid-column-end: span 1;
+  -ms-grid-row: span 1;
+  grid-row-start: span 1;
   -ms-grid-row-span: 1;
-  grid-row-end: 2;
-  -ms-grid-row: 1;
-  grid-row-start: 1;
+  grid-row-end: span 1;
 }
 
-#w-node-_72681a1c-b88b-0f68-b4ae-5638e506c990-76393764 {
+#w-node-_72681a1c-b88b-0f68-b4ae-5638e506c98f-76393764 {
   -ms-grid-column-span: 1;
   grid-column-end: 3;
   -ms-grid-column: 2;
@@ -5514,17 +5835,6 @@ a {
 
 @media screen and (max-width: 767px) {
   #w-node-_8668cd87-f573-4e2a-9fc2-8424228b1aca-76393764 {
-    -ms-grid-column: span 1;
-    grid-column-start: span 1;
-    -ms-grid-column-span: 1;
-    grid-column-end: span 1;
-    -ms-grid-row: span 1;
-    grid-row-start: span 1;
-    -ms-grid-row-span: 1;
-    grid-row-end: span 1;
-  }
-
-  #w-node-_72681a1c-b88b-0f68-b4ae-5638e506c990-76393764 {
     -ms-grid-column: span 1;
     grid-column-start: span 1;
     -ms-grid-column-span: 1;
