removed about-us.html and added sitemap.xml
under the clients direction we have removed the about-us.html, and any
dead pages. we have added the sitemap.xml file as well for
google search console.

--- a/css/modahair.webflow.css
+++ b/css/modahair.webflow.css
@@ -88,8 +88,9 @@ a {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  max-height: 50px;
-  margin-top: 8px;
+  max-height: 45px;
+  margin-top: 10px;
+  margin-right: 5px;
   padding: 0px 15px;
   -webkit-box-pack: center;
   -webkit-justify-content: center;
@@ -381,6 +382,7 @@ a {
 
 .section_content.about {
   height: auto;
+  max-height: none;
   margin-top: 0px;
   margin-bottom: 0px;
   padding-top: 88px;
@@ -402,8 +404,9 @@ a {
 
 .section_content.appt {
   overflow: visible;
+  max-height: none;
   padding-top: 40px;
-  padding-bottom: 100px;
+  padding-bottom: 40px;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
   -webkit-flex-direction: column;
@@ -497,18 +500,21 @@ a {
 }
 
 .content_grid.whyus {
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
   -ms-grid-columns: 1.5fr 1fr;
   grid-template-columns: 1.5fr 1fr;
   font-family: Castelar, sans-serif;
 }
 
 .content_grid.beauty-content {
+  max-height: 711.9618530273438vh;
   -webkit-box-pack: start;
   -webkit-justify-content: start;
   -ms-flex-pack: start;
   justify-content: start;
-  -ms-grid-columns: minmax(200px, 66%);
-  grid-template-columns: minmax(200px, 66%);
+  -ms-grid-columns: minmax(200px, 100%);
+  grid-template-columns: minmax(200px, 100%);
   -ms-grid-rows: auto 1fr;
   grid-template-rows: auto 1fr;
 }
@@ -530,7 +536,9 @@ a {
 }
 
 .feature_container {
-  padding-left: 29px;
+  width: 100%;
+  max-width: 100%;
+  padding-left: 0px;
 }
 
 .paragraph {
@@ -550,6 +558,9 @@ a {
   -webkit-justify-content: center;
   -ms-flex-pack: center;
   justify-content: center;
+  -webkit-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
   -webkit-box-align: center;
   -webkit-align-items: center;
   -ms-flex-align: center;
@@ -814,7 +825,7 @@ a {
   min-height: 100px;
   margin-top: 0px;
   margin-bottom: 0px;
-  padding: 100px 0px;
+  padding: 0px;
   -webkit-box-pack: center;
   -webkit-justify-content: center;
   -ms-flex-pack: center;
@@ -825,10 +836,10 @@ a {
 .parallaxbg {
   position: absolute;
   z-index: 1;
-  height: 200%;
+  height: 100%;
   max-width: none;
   min-width: 100%;
-  margin-top: -800px;
+  margin-top: auto;
   opacity: 0.1;
 }
 
@@ -1298,8 +1309,8 @@ a {
 .html-embed {
   max-width: 100%;
   min-width: 100%;
-  margin-top: 40px;
-  margin-bottom: 40px;
+  margin-top: 20px;
+  margin-bottom: 20px;
   padding-right: 20px;
   padding-left: 20px;
 }
@@ -1335,10 +1346,11 @@ a {
 
 ._3-way-gridd.first.venue-gallery {
   max-width: 100%;
+  min-height: auto;
   min-width: 100%;
   margin-top: 0px;
-  padding-top: 5vh;
-  padding-bottom: 5vh;
+  padding-top: 0vh;
+  padding-bottom: 0vh;
   background-color: #fff;
 }
 
@@ -1851,6 +1863,7 @@ a {
 }
 
 .beauty-services {
+  max-height: none;
   max-width: 100%;
   -webkit-justify-content: space-around;
   -ms-flex-pack: distribute;
@@ -2410,6 +2423,8 @@ a {
   display: -ms-flexbox;
   display: flex;
   overflow: visible;
+  max-width: 100.0002218557151%;
+  min-width: 100%;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
   -webkit-flex-direction: column;
@@ -2478,12 +2493,12 @@ a {
 }
 
 .map-2 {
-  width: 600px;
+  width: 500px;
 }
 
 .logo-mobile {
   position: relative;
-  left: -108px;
+  left: auto;
   margin-left: 0px;
   padding-right: 0px;
   padding-left: 0px;
@@ -2526,21 +2541,31 @@ a {
   display: flex;
   width: 100%;
   max-width: 100%;
+  padding-right: 0%;
+  padding-left: 0%;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
   -webkit-flex-direction: row;
   -ms-flex-direction: row;
   flex-direction: row;
-  -webkit-box-pack: center;
-  -webkit-justify-content: center;
-  -ms-flex-pack: center;
-  justify-content: center;
+  -webkit-box-pack: start;
+  -webkit-justify-content: flex-start;
+  -ms-flex-pack: start;
+  justify-content: flex-start;
+  -webkit-flex-wrap: nowrap;
+  -ms-flex-wrap: nowrap;
+  flex-wrap: nowrap;
   -webkit-box-align: center;
   -webkit-align-items: center;
   -ms-flex-align: center;
   align-items: center;
   align-self: center;
-  grid-column-gap: 50px;
+  -webkit-box-flex: 0;
+  -webkit-flex: 0 auto;
+  -ms-flex: 0 auto;
+  flex: 0 auto;
+  grid-column-gap: 10px;
+  grid-row-gap: 10px;
   font-family: Castelar, sans-serif;
 }
 
@@ -2551,8 +2576,11 @@ a {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  margin-right: 50px;
-  margin-left: 50px;
+  width: auto;
+  max-width: none;
+  min-width: auto;
+  margin-right: 0px;
+  margin-left: 0px;
   padding-top: 18px;
   padding-bottom: 18px;
   -webkit-box-orient: horizontal;
@@ -2568,6 +2596,13 @@ a {
   -webkit-align-items: center;
   -ms-flex-align: center;
   align-items: center;
+  -webkit-align-self: auto;
+  -ms-flex-item-align: auto;
+  align-self: auto;
+  -webkit-box-flex: 0;
+  -webkit-flex: 0 auto;
+  -ms-flex: 0 auto;
+  flex: 0 auto;
 }
 
 .nav-link-2 {
@@ -3162,8 +3197,8 @@ a {
 }
 
 .beauty-button {
-  max-width: 200px;
-  margin-left: 100px;
+  max-width: 400px;
+  margin-left: 40px;
   border-radius: 13px;
   background-color: #e22b71;
   font-family: Castelar, sans-serif;
@@ -3240,6 +3275,11 @@ a {
     align-items: flex-start;
   }
 
+  .div-block-5 {
+    max-width: 39.9995917283584%;
+    min-width: 30%;
+  }
+
   .form-and-map {
     position: relative;
     display: -webkit-box;
@@ -3311,11 +3351,25 @@ a {
     grid-row-gap: 50px;
   }
 
+  .section_content.appt {
+    max-height: 120vh;
+    padding-bottom: 0px;
+  }
+
+  .h2.about-heading {
+    -webkit-box-pack: start;
+    -webkit-justify-content: flex-start;
+    -ms-flex-pack: start;
+    justify-content: flex-start;
+  }
+
   .feature_container {
     padding-left: 90px;
   }
 
   ._3-way-gridd.first.venue-gallery {
+    max-height: 100vh;
+    margin-bottom: 0px;
     padding-top: 0vh;
     padding-bottom: 0vh;
   }
@@ -3325,12 +3379,23 @@ a {
     padding-left: 0%;
   }
 
+  .three-grid {
+    height: 100vh;
+  }
+
+  .card-cover {
+    height: 100%;
+  }
+
   .central-whitebox-l2 {
-    height: 80vh;
+    height: 100vh;
     margin-bottom: 0%;
   }
 
   .central-whitebox-l1 {
+    height: 100vh;
+    max-height: 100vh;
+    min-height: 100px;
     -webkit-align-self: auto;
     -ms-flex-item-align: auto;
     -ms-grid-row-align: auto;
@@ -3362,9 +3427,23 @@ a {
     align-items: flex-start;
   }
 
+  .contact-us {
+    max-width: 100%;
+    min-width: 100%;
+  }
+
+  .div-block-5 {
+    max-width: 50%;
+  }
+
+  .form-and-map {
+    max-width: 100%;
+    min-width: 100%;
+  }
+
   .logo-mobile {
     position: relative;
-    left: -302px;
+    left: 0px;
     display: -webkit-box;
     display: -webkit-flex;
     display: -ms-flexbox;
@@ -3373,6 +3452,10 @@ a {
 
   .navbar-2 {
     position: static;
+    -webkit-box-pack: justify;
+    -webkit-justify-content: space-between;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
   }
 
   .paragraph-5 {
@@ -3380,21 +3463,54 @@ a {
     column-count: auto;
   }
 
+  .logo-div {
+    height: 100.00000762939453px;
+  }
+
+  .logo-div.logo-div-matrix {
+    height: 80px;
+    padding-top: 20px;
+  }
+
   .hair-feature {
     width: 700px;
     grid-row-gap: 50px;
   }
 
+  .div-block-8 {
+    max-width: 100.000255046042%;
+    min-width: 100%;
+  }
+
   .hair-service-list {
     width: 440px;
+  }
+
+  .beauty-button {
+    margin-left: 100px;
   }
 }
 
 @media screen and (min-width: 1920px) {
+  .hero {
+    height: 90vh;
+    max-height: 100vh;
+    min-height: 100vh;
+  }
+
   .section_content {
     -webkit-justify-content: space-around;
     -ms-flex-pack: distribute;
     justify-content: space-around;
+  }
+
+  .section_content.child {
+    min-height: auto;
+  }
+
+  .section_content.about {
+    height: 60vh;
+    max-height: 100vh;
   }
 
   .section_content.appt {
@@ -3404,8 +3520,29 @@ a {
     align-items: center;
   }
 
+  .content_grid {
+    -webkit-box-flex: 1;
+    -webkit-flex: 1;
+    -ms-flex: 1;
+    flex: 1;
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
+    -ms-grid-rows: minmax(auto, 25vh) auto;
+    grid-template-rows: minmax(auto, 25vh) auto;
+  }
+
+  .content_grid.whyus {
+    -ms-grid-rows: minmax(auto, auto) auto;
+    grid-template-rows: minmax(auto, auto) auto;
+  }
+
   .feature_container {
     padding-left: 80px;
+  }
+
+  .section_full {
+    max-height: none;
+    min-height: 60vh;
   }
 
   .heading {
@@ -3425,6 +3562,12 @@ a {
   .text-span {
     padding-top: 20px;
     font-size: 14px;
+  }
+
+  .div-block-5 {
+    max-width: 50%;
+    min-width: 50%;
+    margin-left: 0px;
   }
 
   .logo-mobile {
@@ -3568,6 +3711,7 @@ a {
 
   .section_content.appt {
     overflow: hidden;
+    max-height: none;
     padding-top: 0px;
     padding-bottom: 88px;
   }
@@ -3767,6 +3911,10 @@ a {
     padding-left: 2vh;
   }
 
+  ._3-way-gridd.first.venue-gallery {
+    min-height: auto;
+  }
+
   .three-grid {
     -ms-grid-columns: 1fr;
     grid-template-columns: 1fr;
@@ -3853,6 +4001,10 @@ a {
     -webkit-flex-wrap: wrap;
     -ms-flex-wrap: wrap;
     flex-wrap: wrap;
+  }
+
+  .link-3 {
+    min-width: 100%;
   }
 
   .slider {
@@ -4165,6 +4317,10 @@ a {
     max-width: 100vw;
   }
 
+  .section_content.appt {
+    max-height: none;
+  }
+
   .h2 {
     text-align: center;
   }
@@ -4355,6 +4511,11 @@ a {
 
   ._3-way-gridd.first.venue-gallery {
     overflow: hidden;
+    min-height: auto;
+  }
+
+  .card-cover {
+    height: 100%;
   }
 
   .card-2 {
@@ -4671,7 +4832,7 @@ a {
   }
 
   .button.invert {
-    margin-top: 0px;
+    margin-top: 20px;
     text-align: center;
   }
 
@@ -4712,7 +4873,22 @@ a {
   .section_content.about {
     max-height: none;
     max-width: 100%;
+    min-height: auto;
     margin-bottom: 0px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    -webkit-box-flex: 1;
+    -webkit-flex: 1;
+    -ms-flex: 1;
+    flex: 1;
   }
 
   .section_content.appt {
@@ -4742,13 +4918,17 @@ a {
   }
 
   .content_grid {
-    max-height: none;
+    height: 100.001428139314%;
+    max-height: 100.001428139314%;
+    min-height: 100%;
     -webkit-box-align: stretch;
     -webkit-align-items: stretch;
     -ms-flex-align: stretch;
     align-items: stretch;
     -ms-grid-columns: minmax(200px, 1fr);
     grid-template-columns: minmax(200px, 1fr);
+    -ms-grid-rows: minmax(auto, 1fr);
+    grid-template-rows: minmax(auto, 1fr);
   }
 
   .content_grid.logos {
@@ -4773,7 +4953,13 @@ a {
   }
 
   .paragraph {
+    max-height: none;
     max-width: 100%;
+    min-height: auto;
+    -webkit-box-flex: 1;
+    -webkit-flex: 1;
+    -ms-flex: 1;
+    flex: 1;
   }
 
   .paragraph.beauty-services-text {
@@ -5309,11 +5495,18 @@ a {
   }
 
   .logo-mobile {
-    left: 32px;
+    left: 10px;
     display: -webkit-box;
     display: -webkit-flex;
     display: -ms-flexbox;
     display: flex;
+    width: 70%;
+    min-width: 70%;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: row;
+    -ms-flex-direction: row;
+    flex-direction: row;
     -webkit-box-pack: center;
     -webkit-justify-content: center;
     -ms-flex-pack: center;
@@ -5357,8 +5550,25 @@ a {
     display: flex;
   }
 
+  .navbar-2 {
+    min-width: 100px;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: row;
+    -ms-flex-direction: row;
+    flex-direction: row;
+  }
+
+  .container-6 {
+    right: -100px;
+  }
+
   .menu-button {
     left: -202px;
+  }
+
+  .menu-button.w--open {
+    left: 0px;
   }
 
   .paragraph-5 {
@@ -5421,6 +5631,18 @@ a {
     width: auto;
   }
 
+  .nav-menu {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: row;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    -webkit-box-align: stretch;
+    -webkit-align-items: stretch;
+    -ms-flex-align: stretch;
+    align-items: stretch;
+  }
+
   .beauty-element {
     text-align: center;
   }
@@ -5452,6 +5674,22 @@ a {
     margin-right: 0px;
     padding-right: 5px;
     padding-left: 5px;
+  }
+
+  .div-block-14 {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
   }
 }
 
@@ -5490,17 +5728,6 @@ a {
   align-self: center;
 }
 
-#w-node-_05c5ec03-d637-a420-f7fc-8ff9c8522ee0-76393764 {
-  -ms-grid-column: span 1;
-  grid-column-start: span 1;
-  -ms-grid-column-span: 1;
-  grid-column-end: span 1;
-  -ms-grid-row: span 1;
-  grid-row-start: span 1;
-  -ms-grid-row-span: 1;
-  grid-row-end: span 1;
-}
-
 #w-node-_72681a1c-b88b-0f68-b4ae-5638e506c98f-76393764 {
   -ms-grid-column-span: 1;
   grid-column-end: 3;
@@ -5510,6 +5737,17 @@ a {
   grid-row-end: 2;
   -ms-grid-row: 1;
   grid-row-start: 1;
+}
+
+#w-node-_05c5ec03-d637-a420-f7fc-8ff9c8522ee0-76393764 {
+  -ms-grid-column: span 1;
+  grid-column-start: span 1;
+  -ms-grid-column-span: 1;
+  grid-column-end: span 1;
+  -ms-grid-row: span 1;
+  grid-row-start: span 1;
+  -ms-grid-row-span: 1;
+  grid-row-end: span 1;
 }
 
 #w-node-_5e7ee914-865f-cab9-8a1d-5ac5d63c5f77-76393764 {
@@ -5590,19 +5828,6 @@ a {
   grid-row-end: span 1;
   -ms-grid-row: span 1;
   grid-row-start: span 1;
-}
-
-#w-node-_220bfd01-78f3-c9bb-25c7-1e8a60ebba03-60ebb9d4 {
-  -ms-grid-row: 1;
-  -ms-grid-column: 7;
-  grid-area: Area-2;
-  -ms-grid-row-align: center;
-  align-self: center;
-}
-
-.gallery-grid-container>#w-node-_220bfd01-78f3-c9bb-25c7-1e8a60ebba03-60ebb9d4 {
-  -ms-grid-row: 3;
-  -ms-grid-column: 9;
 }
 
 #w-node-_220bfd01-78f3-c9bb-25c7-1e8a60ebba14-60ebb9d4 {
@@ -5687,6 +5912,19 @@ a {
   justify-self: center;
 }
 
+#w-node-_220bfd01-78f3-c9bb-25c7-1e8a60ebba03-60ebb9d4 {
+  -ms-grid-row: 1;
+  -ms-grid-column: 7;
+  grid-area: Area-2;
+  -ms-grid-row-align: center;
+  align-self: center;
+}
+
+.gallery-grid-container>#w-node-_220bfd01-78f3-c9bb-25c7-1e8a60ebba03-60ebb9d4 {
+  -ms-grid-row: 3;
+  -ms-grid-column: 9;
+}
+
 #w-node-d234d160-6360-459f-55a1-e5697afd00b9-60ebb9d4 {
   -ms-grid-column: span 1;
   grid-column-start: span 1;
@@ -5731,20 +5969,6 @@ a {
   grid-column-start: span 2;
   -ms-grid-column-span: 2;
   grid-column-end: span 2;
-}
-
-#w-node-_0748e481-3ad1-73f8-9fed-997831ac70fe-19393766 {
-  -webkit-align-self: start;
-  -ms-flex-item-align: start;
-  -ms-grid-row-align: start;
-  align-self: start;
-}
-
-#w-node-_0748e481-3ad1-73f8-9fed-997831ac716c-19393766 {
-  -webkit-align-self: center;
-  -ms-flex-item-align: center;
-  -ms-grid-row-align: center;
-  align-self: center;
 }
 
 #w-node-_8c9dbebf-56e3-ab97-0335-5cadd2224ed7-7639376c {
@@ -5860,6 +6084,19 @@ a {
 
 @media screen and (min-width: 1920px) {
   #w-node-_46acf067-22af-cecd-45ff-99098dcec5d8-5239376e {
+    -ms-grid-column: 1;
+    grid-column-start: 1;
+    -ms-grid-column-span: 1;
+    grid-column-end: 2;
+    -ms-grid-row: 1;
+    grid-row-start: 1;
+    -ms-grid-row-span: 1;
+    grid-row-end: 2;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  #w-node-d830f7d8-7838-af2e-f28c-9646db9c978c-db9c9789 {
     -ms-grid-column: 1;
     grid-column-start: 1;
     -ms-grid-column-span: 1;
