--- a/css/modahair.webflow.css
+++ b/css/modahair.webflow.css
@@ -406,6 +406,7 @@ a {
 
 .section_content.appt {
     overflow: visible;
+    height: auto;
     max-height: none;
     padding-top: 40px;
     padding-bottom: 40px;
@@ -1520,7 +1521,7 @@ a {
     display: -webkit-flex;
     display: -ms-flexbox;
     display: flex;
-    height: 90vh;
+    height: auto;
     margin-top: 0%;
     margin-bottom: 0%;
     -webkit-box-pack: center;
@@ -2424,6 +2425,7 @@ a {
 }
 
 .contact-us {
+    max-height: none;
     position: relative;
     bottom: -34px;
     display: -webkit-box;
@@ -3444,6 +3446,7 @@ textarea {
     }
     .section_content.appt {
         max-height: none;
+        padding-top: 200px;
         padding-bottom: 50px;
     }
     .h2.about-heading {
@@ -3456,7 +3459,7 @@ textarea {
         padding-left: 90px;
     }
     ._3-way-gridd.first.venue-gallery {
-        max-height: 100vh;
+        max-height: none;
         margin-bottom: 0px;
         padding-top: 0vh;
         padding-bottom: 0vh;
@@ -3472,12 +3475,12 @@ textarea {
         height: 100%;
     }
     .central-whitebox-l2 {
-        height: 100vh;
+        height: 100%;
         margin-bottom: 0%;
     }
     .central-whitebox-l1 {
-        height: 100vh;
-        max-height: 100vh;
+        height: auto;
+        max-height: none;
         min-height: 100px;
         -webkit-align-self: auto;
         -ms-flex-item-align: auto;
@@ -3928,7 +3931,7 @@ textarea {
         grid-template-columns: 1fr;
     }
     .central-whitebox-l2 {
-        height: 100%;
+        height: auto;
     }
     .central-whitebox-l1 {
         height: auto;
@@ -4277,6 +4280,7 @@ textarea {
         max-width: 100vw;
     }
     .section_content.appt {
+        height: auto;
         max-height: none;
     }
     .h2 {
